<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/settings_horizontal_padding"
    android:paddingVertical="@dimen/settings_vertical_padding"
    android:background="@color/sky_background_color"
    tools:context=".UserInterface.SettingsActivity">

    <TextView
        android:id="@+id/settings_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_title_bottom_margin"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autoSizeTextType="uniform"
        android:textSize="@dimen/settings_title_field_text_size"
        android:textColor="@color/settings_title_text_color"
        android:textStyle="bold"
        android:text="@string/settings_title" />

    <Switch
        android:id="@+id/settings_play_sounds_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_item_bottom_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_title_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/settings_item_field_text_size"
        android:textColor="@color/settings_item_text_color"
        android:text="@string/settings_play_sounds_switch_label" />

    <Switch
        android:id="@+id/settings_play_intro_animations_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_item_bottom_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_play_sounds_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/settings_item_field_text_size"
        android:textColor="@color/settings_item_text_color"
        android:text="@string/settings_play_intro_animations_switch_label" />

    <Switch
        android:id="@+id/settings_play_skip_played_intros_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_item_bottom_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_play_intro_animations_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/settings_item_field_text_size"
        android:textColor="@color/settings_item_text_color"
        android:text="@string/settings_play_skip_beaten_intros_switch_label" />

    <Switch
        android:id="@+id/settings_easy_mode_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_item_bottom_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_play_skip_played_intros_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/settings_item_field_text_size"
        android:textColor="@color/settings_item_text_color"
        android:text="@string/settings_easy_mode_switch_label" />

    <TextView
        android:id="@+id/settings_game_controller_state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_item_bottom_margin"
        android:layout_marginBottom="@dimen/settings_item_bottom_margin"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_easy_mode_switch"
        android:autoSizeTextType="uniform"
        android:textSize="@dimen/settings_item_field_text_size"
        android:textColor="@color/settings_game_controller_detected_text_color"
        android:textStyle="bold"
        android:text="@string/settings_game_controller_state_not_connected" />

    <ImageButton
        android:id="@+id/settings_control_scheme_image_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:layout_marginTop="@dimen/settings_button_vertical_margin"
        android:layout_marginBottom="@dimen/settings_button_vertical_margin"
        android:layout_marginLeft="@dimen/settings_button_horizontal_margin"
        android:layout_marginRight="@dimen/settings_button_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_game_controller_state_text_view"
        android:background="@color/clear_color"
        android:src="@mipmap/settings_set_control_scheme" />

    <ImageButton
        android:id="@+id/settings_starting_level_image_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:layout_marginTop="@dimen/settings_button_vertical_margin"
        android:layout_marginBottom="@dimen/settings_button_vertical_margin"
        android:layout_marginLeft="@dimen/settings_button_horizontal_margin"
        android:layout_marginRight="@dimen/settings_button_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_control_scheme_image_button"
        android:background="@color/clear_color"
        android:src="@mipmap/settings_set_starting_level" />

    <ImageButton
        android:id="@+id/settings_get_extras_image_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:layout_marginTop="@dimen/settings_button_vertical_margin"
        android:layout_marginBottom="@dimen/settings_button_vertical_margin"
        android:layout_marginLeft="@dimen/settings_button_horizontal_margin"
        android:layout_marginRight="@dimen/settings_button_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_starting_level_image_button"
        android:background="@color/clear_color"
        android:src="@mipmap/settings_get_extras" />

    <ImageButton
        android:id="@+id/settings_contact_us_image_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:layout_marginTop="@dimen/settings_button_vertical_margin"
        android:layout_marginBottom="@dimen/settings_button_vertical_margin"
        android:layout_marginLeft="@dimen/settings_button_horizontal_margin"
        android:layout_marginRight="@dimen/settings_button_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_get_extras_image_button"
        android:background="@color/clear_color"
        android:src="@mipmap/contact_us" />

    <TextView
        android:id="@+id/settings_version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:autoSizeTextType="uniform"
        android:textSize="@dimen/settings_version_field_text_size"
        android:textColor="@color/settings_version_text_color"
        android:text="@string/settings_version_prefix" />

    <ImageButton
        android:id="@+id/settings_exit_image_button"
        android:layout_width="@dimen/default_exit_button_width"
        android:layout_height="@dimen/default_exit_button_height"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/clear_color"
        android:src="@mipmap/game_control_button_exit" />

</androidx.constraintlayout.widget.ConstraintLayout>
