<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorial_page_4_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tutorial_page_4_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autoSizeTextType="uniform"
            android:textSize="@dimen/tutorial_title_field_text_size"
            android:textColor="@color/tutorial_text_color"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/tutorial_page_4_title" />

        <TextView
            android:id="@+id/tutorial_page_4_details_1_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/tutorial_title_bottom_margin"
            android:layout_marginBottom="@dimen/tutorial_description_bottom_margin"
            android:layout_centerHorizontal="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tutorial_page_4_title_text_view"
            android:autoSizeTextType="uniform"
            android:textSize="@dimen/tutorial_description_text_size"
            android:textColor="@color/tutorial_text_color"
            android:textAlignment="center"
            android:text="@string/tutorial_page_4_description_1" />

        <ImageView
            android:id="@+id/tutorial_page_4_stasis_field_image_view"
            android:layout_width="@dimen/tutorial_stasis_field_image_width"
            android:layout_height="@dimen/tutorial_stasis_field_image_height"
            android:layout_marginTop="@dimen/tutorial_teleporter_view_bottom_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tutorial_page_4_details_1_text_view"
            android:src="@mipmap/guard_trapped" />

        <TextView
            android:id="@+id/tutorial_page_4_details_2_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/tutorial_teleporter_view_bottom_margin"
            android:layout_marginBottom="@dimen/tutorial_description_bottom_margin"
            android:layout_centerHorizontal="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tutorial_page_4_stasis_field_image_view"
            app:layout_constraintBottom_toTopOf="@id/tutorial_page_4_next_image_button"
            android:autoSizeTextType="uniform"
            android:textSize="@dimen/tutorial_description_text_size"
            android:textColor="@color/tutorial_text_color"
            android:textAlignment="center"
            android:text="@string/tutorial_page_4_description_2" />

        <ImageButton
            android:id="@+id/tutorial_page_4_next_image_button"
            android:layout_width="@dimen/default_next_button_width"
            android:layout_height="@dimen/default_next_button_height"
            android:scaleType="fitXY"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/clear_color"
            android:src="@mipmap/game_control_button_next" />

        <ImageButton
            android:id="@+id/tutorial_page_4_back_image_button"
            android:layout_width="@dimen/default_exit_button_width"
            android:layout_height="@dimen/default_exit_button_height"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/clear_color"
            android:src="@mipmap/game_control_button_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
